add product config
