# src/main/kotlin/com/wutsi/platform/tenant/dto/Product.kt
@@ -1,0 +1,7 @@
+package com.wutsi.platform.tenant.dto
+
+import kotlin.String
+
+public data class Product(
+    public val defaultPictureUrl: String = ""
+)
