# src/main/kotlin/com/wutsi/platform/tenant/entity/ProductEntity.kt
@@ -1,0 +1,5 @@
+package com.wutsi.platform.tenant.entity
+
+public data class ProductEntity(
+    public var defaultPictureUrl: String = "",
+)
